--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,28 @@ body {
 .nav-logo {
   width: 6rem;
 }
+.load-more {
+  width: 100%;
+  text-align: start;
+  padding: 1rem;
+}
+.pokemon-page {
+  width: 100%;
+  height: 100%;
+}
+
+.pokemon-card__container_img {
+  text-align: center;
+}
+
+.pokemon-card {
+  width: 80%;
+}
+
+.pokemon-card__img {
+  width: 100%;
+}
+
+.pokemon-card__name {
+  text-transform: uppercase;
+}
